tests/fixtures/errors/unexpected_data_row.norm
:root
:data
k
v

stray
